--- a/minimal-logging-macros/Cargo.toml
+++ b/minimal-logging-macros/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "minimal-logging-macros"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["RosieTheGhostie"]
 edition = "2021"
 
 [lib]
 crate-type = ["lib"]
 path = "src/lib.rs"
+
+[dependencies]
+console = "0.15"
+lazy_static = "1.5"
